--- a/ContactUs.html
+++ b/ContactUs.html
@@ -13,9 +13,12 @@
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
     <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
     <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+
     <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
+    <link rel="stylesheet" href="Styles/ContactLayout.css" />
+
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
@@ -29,59 +32,69 @@
 
     <hr class="nav" />
 
-    <center><h1 class="pages">Contact Us</h1></center>
+    <main class="grid-container">
+        <div id="grid-head">
+            <center><h1 class="pages">Contact Us</h1></center>
+        </div>
+        <div id="grid-image">
+            <img class="format" src="Images/Contact.png" alt="Logo" />
 
-    <div>
+        </div>
+        <div id="grid-content">
+            <h1>Developer: Andrew Rotert</h1>
+            <h3>Email: Andrew.Rotert@gmail.com</h3>
+            <h3>Email: Andrew.Rotert@trojans.dsu.edu</h3>
+            <h3>Phone: (605) 215-8188</h3>
+        </div>
 
-        <table class="format">
-            <tr>
-                <td class="format">
-                    <img class="format" src="Images/Contact.png" alt="Logo" />
+        <div id="grid-main">
+            <center><h1 class="pages">Site Map</h1></center>
+            <h1>Internal Links</h1>
+            <ul>
+                <li><a href="index.html">Home Page</a></li>
+                <li>
+                    iOS Apps
+                    <ul>
+                        <li><a href="PutterFitter.html">Putter Fitter</a></li>
+                        <li><a href="TrapshootingScorecard.html">Trapshooting Scorecard</a></li>
+                        <li><a href="ComputerScienceCalculator.html">Computer Science Converter</a></li>
+                        <li><a href="SpeedometerPlusMap.html">Simple Speedometer and Map</a></li>
+                        <li><a href="HolidayClicker.html">Holiday Clicker</a></li>
+                    </ul>
+                </li>
+                <li>
+                    Android Apps
+                    <ul>
+                        <li><a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="Projects.html">Projects</a>
+                    <ul>
+                        <li><a href="iOS.html">iOS Projects</a></li>
+                        <li><a href="Android.html">Android Projects</a></li>
+                        <li><a href="Other.html">Other Projects</a></li>
+                    </ul>
+                </li>
+                <li><a href="BusinessPlan.html">Business Plan</a></li>
+                <li><a href="AboutMe.html">About Me</a></li>
+                <li><a href="ContactUs.html">Contact Us</a></li>
 
-                </td>
-                <td class="format">
-                    <h1>Developer: Andrew Rotert</h1>
-                    <h3>Email: Andrew.Rotert@gmail.com</h3>
-                    <h3>Email: Andrew.Rotert@trojans.dsu.edu</h3>
-                    <h3>Phone: (605) 215-8188</h3>
-                </td>
-            </tr>
-        </table>
-
-        <center><h1 class="pages">Site Map</h1></center>
-        <ul>
-            <li><a href="index.html">Home Page</a></li>
-            <li>
-                iOS Apps
-                <ul>
-                    <li><a href="PutterFitter.html">Putter Fitter</a></li>
-                    <li><a href="TrapshootingScorecard.html">Trapshooting Scorecard</a></li>
-                    <li><a href="ComputerScienceCalculator.html">Computer Science Converter</a></li>
-                    <li><a href="SpeedometerPlusMap.html">Simple Speedometer and Map</a></li>
-                    <li><a href="HolidayClicker.html">Holiday Clicker</a></li>
-                </ul>
-            </li>
-            <li>
-                Android Apps
-                <ul>
-                    <li><a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="Projects.html">Projects</a>
-                <ul>
-                    <li><a href="iOS.html">iOS Projects</a></li>
-                    <li><a href="Android.html">Android Projects</a></li>
-                    <li><a href="Other.html">Other Projects</a></li>
-                </ul>
-            </li>
-            <li><a href="BusinessPlan.html">Business Plan</a></li>
-            <li><a href="AboutMe.html">About Me</a></li>
-            <li><a href="ContactUs.html">Contact Us</a></li>
-
-        </ul>
-
-    </div>
+            </ul>
+            <h1>External Links</h1>
+            <ul>
+                <li><a href="https://github.com/ajrotert/repositories">Github Repositories</a></li>
+                <li><a href="https://apps.apple.com/us/app/putter-fitter/id1448329273">Putter Fitter Download</a></li>
+                <li><a href="https://apps.apple.com/us/app/trap-shooting-scorecard/id1450821405">Trapshooting Scorecard Download</a></li>
+                <li><a href="https://apps.apple.com/us/app/computer-science-converter/id1451753843">Computer Science Converter Download</a></li>
+                <li><a href="https://apps.apple.com/us/app/simple-speedometer-and-map/id1485405938">Simple Speedometer and Map Download</a></li>
+                <li><a href="https://apps.apple.com/us/app/holiday-clicker/id1490141107">Holiday Clicker Download</a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Lift Force Calculator Download</a></li>
+                <li><a href="Documents/DevelopedNotDownloadedBusinessPlan.pdf" download="Developed-Not-Downloaded-Business-Plan">Business Plan Download</a></li>
+                <li><a href="https://ajrotert.github.io/ConnectingWebsiteToFirebase/index.html">FireChat Project</a></li>
+            </ul>
+        </div>
+    </main>
 
     <footer>
         <div class="right_position">
