--- a/Dynamic/HTML/AndroidPlaceholder.html
+++ b/Dynamic/HTML/AndroidPlaceholder.html
@@ -1,6 +1,6 @@
-﻿<table class="format">
-    <tr>
-        <td class="format">
+﻿<div class="grid-container">
+    <div>
+        <center>
             <img class="format" src="Images/AppLogos/Lift.png" alt="Lift Force Calculator" />
             <h2><i>Lift Force Calculator</i></h2>
             <p>Published: <a href="LiftForceCalculator.html">Support Page</a></p>
@@ -13,11 +13,7 @@
                 as soon as all the need input is provided.
 
             </p>
-
             <hr class="table" />
-        </td>
-        <td class="format">
-            <!--Blank-->
-        </td>
-    </tr>
-</table>
+        </center>
+    </div>
+</div>
