--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -1,6 +1,6 @@
-﻿<table class="format">
-    <tr>
-        <td class="format">
+﻿<div class="grid-container">
+    <div>
+        <center>
             <img class="format" src="Images/Projects/GripFinder2.png" alt="Grip Finder" />
             <h2><i>Grip Finder</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/Grip-Finder">Visit Now</a></p>
@@ -13,8 +13,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-        <td class="format">
+        </center>
+    </div>
+    <div>
+        <center>
             <img class="format" src="Images/Projects/Minesweeper.png" alt="Minesweeper" />
             <h2><i>Minesweeper</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/AR.Minesweeper">Visit Now</a></p>
@@ -27,10 +29,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-    </tr>
-    <tr>
-        <td class="format">
+        </center>
+    </div>
+    <div>
+        <center>
             <img class="format" src="Images/Projects/Tsharp.png" alt="Tsharp" />
             <h2><i>Tsharp</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/Language-Processing">Visit Now</a></p>
@@ -43,8 +45,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-        <td class="format">
+        </center>
+    </div>
+    <div>
+        <center>
             <img class="format" src="Images/Projects/Golf2.png" alt="Mini-Golf" />
             <h2><i>Mini-Golf</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/Assembely">Visit Now</a></p>
@@ -57,10 +61,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-    </tr>
-    <tr>
-        <td class="format">
+        </center>
+    </div>
+    <div>
+        <center>
             <img class="format" src="Images/Projects/Website2.png" alt="Website" />
             <h2><i>Developed Not Download</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/Developed-Not-Downloaded">Visit Now</a></p>
@@ -71,8 +75,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-        <td class="format">
+        </center>
+    </div>
+    <div>
+        <center>
             <h2><i>Programming Competitions</i></h2>
             <p>Language Used: C++, Python, C# </p>
             <p>About:</p>
@@ -89,7 +95,6 @@
             </p>
 
             <hr class="table" />
-        </td>
-    </tr>
-
-</table>
+        </center>
+    </div>
+</div>
