--- a/Dynamic/HTML/iOSPlaceholder.html
+++ b/Dynamic/HTML/iOSPlaceholder.html
@@ -1,6 +1,6 @@
-﻿<table class="format">
-    <tr>
-        <td class="format">
+﻿<div class="grid-container">
+    <div>
+        <center>
             <img class="format" src="Images/AppLogos/Putter.png" alt="Putter Fitter" />
             <h2><i>Putter Fitter</i></h2>
             <p>Published: <a href="PutterFitter.html">Support Page</a></p>
@@ -14,8 +14,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-        <td class="format">
+        </center>
+    </div>
+    <div>
+        <center>
             <img class="format" src="Images/AppLogos/Trap.png" alt="Trap Shooting" />
             <h2><i>Trap Shooting Scorecard</i></h2>
             <p>Published: <a href="TrapshootingScorecard.html">Support Page</a></p>
@@ -29,10 +31,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-    </tr>
-    <tr>
-        <td class="format">
+        </center>
+    </div>
+    <div>
+        <center>
             <img class="format" src="Images/AppLogos/Calc.png" alt="Computer Science Calculator" />
             <h2><i>Computer Science Calculator</i></h2>
             <p>Published: <a href="ComputerScienceCalculator.html">Support Page</a></p>
@@ -46,8 +48,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-        <td class="format">
+        </center>
+    </div>
+    <div>
+        <center>
             <img class="format" src="Images/AppLogos/Speed.png" alt="Simple Speedometer Plus Map" />
             <h2><i>Simple Speedometer Plus Map</i></h2>
             <p>Published: <a href="SpeedometerPlusMap.html">Support Page</a></p>
@@ -61,10 +65,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-    </tr>
-    <tr>
-        <td class="format">
+        </center>
+    </div>
+    <div id="item5">
+        <center>
             <img class="format" src="Images/AppLogos/HC.png" alt="Holiday Clicker" />
             <h2><i>Holiday Clicker</i></h2>
             <p>Published: <a href="HolidayClicker.html">Support Page</a></p>
@@ -78,8 +82,10 @@
             </p>
 
             <hr class="table" />
-        </td>
-        <td class="format">
+        </center>
+    </div>
+    <div id="item6">
+        <center>
             <img class="format" src="Images/AppLogos/OTH.png" alt="On The Hunt" />
             <h2><i>On The Hunt</i></h2>
             <p>Not Yet Published</p>
@@ -93,6 +99,6 @@
             </p>
 
             <hr class="table" />
-        </td>
-    </tr>
-</table>
+        </center>
+    </div>
+</div>
