--- a/AboutMe.html
+++ b/AboutMe.html
@@ -38,10 +38,10 @@
         </div>
 
         <div id="grid-image">
-            <img class="format" src="Images/Bio.png" alt="Image of the developer" />
+            <img class="resizing" src="Images/Bio.png" alt="Image of the developer" />
         </div>
         <div id="grid-content">
-            <p class="bio">Short Bio:</p>
+            <center><p class="bio">Short Bio:</p></center>
             <p class="just bio">
                 I am from Sioux Falls, SD. I got into programming because I like to problem solve. I am currently majoring in computer science and applied mathematics at Dakota State University.
                 I enjoy taking on new challenges and learning new techniques to solve them. Over my sophomore year of college, after completing Object Oriented design, I got into mobile app
