--- a/ContactUs.html
+++ b/ContactUs.html
@@ -37,14 +37,16 @@
             <center><h1 class="pages">Contact Us</h1></center>
         </div>
         <div id="grid-image">
-            <img class="format" src="Images/Contact.png" alt="Logo" />
+            <img class="resizing" src="Images/Contact.png" alt="Logo" />
 
         </div>
         <div id="grid-content">
-            <h1>Developer: Andrew Rotert</h1>
-            <h3>Email: Andrew.Rotert@gmail.com</h3>
-            <h3>Email: Andrew.Rotert@trojans.dsu.edu</h3>
-            <h3>Phone: (605) 215-8188</h3>
+            <center>
+                <h1>Developer: Andrew Rotert</h1>
+                <h3>Email: Andrew.Rotert@gmail.com</h3>
+                <h3>Email: Andrew.Rotert@trojans.dsu.edu</h3>
+                <h3>Phone: (605) 215-8188</h3>
+            </center>
         </div>
 
         <div id="grid-main">
