--- a/Dynamic/HTML/AndroidPlaceholder.html
+++ b/Dynamic/HTML/AndroidPlaceholder.html
@@ -1,7 +1,7 @@
 ﻿<div class="grid-container">
     <div>
         <center>
-            <img class="format" src="Images/AppLogos/Lift.png" alt="Lift Force Calculator" />
+            <img class="resizing" src="Images/AppLogos/Lift.png" alt="Lift Force Calculator" />
             <h2><i>Lift Force Calculator</i></h2>
             <p>Published: <a href="LiftForceCalculator.html">Support Page</a></p>
             <p>View at the Google Play Store: <a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Visit Now</a></p>
