--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -1,7 +1,7 @@
 ﻿<div class="grid-container">
     <div>
         <center>
-            <img class="format" src="Images/Projects/GripFinder2.png" alt="Grip Finder" />
+            <img class="resizing" src="Images/Projects/GripFinder2.png" alt="Grip Finder" />
             <h2><i>Grip Finder</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/Grip-Finder">Visit Now</a></p>
             <p>Language Used: C#</p>
@@ -17,7 +17,7 @@
     </div>
     <div>
         <center>
-            <img class="format" src="Images/Projects/Minesweeper.png" alt="Minesweeper" />
+            <img class="resizing" src="Images/Projects/Minesweeper.png" alt="Minesweeper" />
             <h2><i>Minesweeper</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/AR.Minesweeper">Visit Now</a></p>
             <p>Language Used: C#</p>
@@ -33,7 +33,7 @@
     </div>
     <div>
         <center>
-            <img class="format" src="Images/Projects/Tsharp.png" alt="Tsharp" />
+            <img class="resizing" src="Images/Projects/Tsharp.png" alt="Tsharp" />
             <h2><i>Tsharp</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/Language-Processing">Visit Now</a></p>
             <p>Language Used: Yacc, Lex, C</p>
@@ -49,7 +49,7 @@
     </div>
     <div>
         <center>
-            <img class="format" src="Images/Projects/Golf2.png" alt="Mini-Golf" />
+            <img class="resizing" src="Images/Projects/Golf2.png" alt="Mini-Golf" />
             <h2><i>Mini-Golf</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/Assembely">Visit Now</a></p>
             <p>Language Used: Assembly x86</p>
@@ -65,7 +65,7 @@
     </div>
     <div>
         <center>
-            <img class="format" src="Images/Projects/Website2.png" alt="Website" />
+            <img class="resizing" src="Images/Projects/Website2.png" alt="Website" />
             <h2><i>Developed Not Download</i></h2>
             <p>View progress on Github: <a href="https://github.com/ajrotert/Developed-Not-Downloaded">Visit Now</a></p>
             <p>Language Used: HTML5, CSS3</p>
