--- a/SpeedometerPlusMap.html
+++ b/SpeedometerPlusMap.html
@@ -94,7 +94,7 @@
         </div>
         <div id="grid-privacy">
             <h2 class="pages"><object id="privacy_page_link">Privacy Policy</object></h2>
-            <div class="pagesformat">
+            <div>
                 <h3>Privacy Policy</h3>
                 <p>
                     Andrew Rotert built the Simple Speedometer and Map app as a Free app. This SERVICE is provided by Andrew Rotert at no cost and is intended for use as is.
