--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@ body {
         </div>
 
         <div id="grid-image1">
-            <img class="format" src="Images/Support.png" alt="Mobile App Support" />
+            <img class="resizing" src="Images/Support.png" alt="Mobile App Support" />
         </div>
         <div id="grid-content1">
             <h2>A website for mobile app support</h2>
         </div>
 
         <div id="grid-image2">
-            <img class="format" src="Images/Projects.png" alt="Ongoing Projects" />
+            <img class="resizing" src="Images/Projects.png" alt="Ongoing Projects" />
         </div>
         <div id="grid-content2">
             <h2>A website for ongoing projects</h2>
         </div>
 
         <div id="grid-image3">
-            <img class="format" src="Images/Future.png" alt="Future Business Plan" />
+            <img class="resizing" src="Images/Future.png" alt="Future Business Plan" />
         </div>
         <div id="grid-content3">
             <h2>A website for a future business platform</h2>
         </div>
 
         <div id="grid-image4">
-            <img class="format" src="Images/Self.png" alt="About Developer" />
+            <img class="resizing" src="Images/Self.png" alt="About Developer" />
         </div>
         <div id="grid-content4">
             <h2>A website about the developer, Andrew Rotert</h2>
