--- a/BusinessPlan.html
+++ b/BusinessPlan.html
@@ -13,9 +13,11 @@
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
     <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
     <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+
     <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
+    <link rel="stylesheet" href="Styles/BusinessLayout.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
