--- a/Dynamic/NavigationBar.html
+++ b/Dynamic/NavigationBar.html
@@ -1,4 +1,87 @@
-﻿<nav id="nav-placeholder">
+﻿<style>
+
+    ul.nav {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+    }
+
+    li.navitem {
+        float: left;
+    }
+
+        li.navitem a, .dropbtn {
+            display: inline-block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+            li.navitem a:hover, dropdown:hover .dropbtn {
+                background-color: #0066ff;
+            }
+
+    li.dropdown {
+        display: inline-block;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #DCDCDC;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    div.dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        text-align: left;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    .active {
+        background-color: #022E6D;
+    }
+
+    .sticky {
+        position: fixed;
+        top: 0;
+        width: 90%;
+        z-index: 1;
+    }
+
+    /*********************** Mobile Layout ***************************/
+    @media screen and (max-width: 1000px) {
+        li.navitem a, .dropbtn {
+            font-size: 25px;
+        }
+
+        div.dropdown-content a {
+            font-size: 25px;
+        }
+        .sticky{
+            width: 100%;
+        }
+    }
+
+</style>
+
+
+<nav id="nav-placeholder">
     <ul class="nav">
         <li class="navitem" id="Home-Page"><a href="index.html">Home</a></li>
         <li class="dropdown navitem" id="iOS-Page">
