--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -71,7 +71,23 @@
             <p>Language Used: HTML5, CSS3</p>
             <p>About:</p>
             <p class="just">
-                Developed Not Downloaded is a series of static webpages designed with HTML and CSS.
+                Developed Not Downloaded is a series of static webpages designed with HTML and CSS. It is my main website to
+                showcase my projects, and provide support to my published applications. 
+            </p>
+
+            <hr class="table" />
+        </center>
+    </div>
+    <div>
+        <center>
+            <img class="resizing" src="Images/Projects/FireChat.png" alt="Website" />
+            <h2><i>FireChat</i></h2>
+            <p>View progress on Github: <a href="https://github.com/ajrotert/ConnectingWebsiteToFirebase">Visit Now</a></p>
+            <p>Language Used: HTML5, CSS3, JavaScript</p>
+            <p>About:</p>
+            <p class="just">
+                FireChat is my project website where I explore new ideas and concepts. Currently I have experimented with Firebase realtime database storage
+                responsive layouts, and CSS Grid views.
             </p>
 
             <hr class="table" />
