--- a/Dynamic/HTML/iOSPlaceholder.html
+++ b/Dynamic/HTML/iOSPlaceholder.html
@@ -1,7 +1,7 @@
 ﻿<div class="grid-container">
     <div>
         <center>
-            <img class="resizing" src="Images/AppLogos/Putter.png" alt="Putter Fitter" />
+            <img class="resizing" src="Images/Projects/PutterFitter.png" alt="Putter Fitter" />
             <h2><i>Putter Fitter</i></h2>
             <p>Published: <a href="PutterFitter.html">Support Page</a></p>
             <p>View at the App Store: <a href="https://itunes.apple.com/us/app/putter-fitter/id1448329273?mt=8">Visit Now</a></p>
@@ -18,7 +18,7 @@
     </div>
     <div>
         <center>
-            <img class="resizing" src="Images/AppLogos/Trap.png" alt="Trap Shooting" />
+            <img class="resizing" src="Images/Projects/Trap.png" alt="Trap Shooting" />
             <h2><i>Trap Shooting Scorecard</i></h2>
             <p>Published: <a href="TrapshootingScorecard.html">Support Page</a></p>
             <p>View at the App Store: <a href="https://itunes.apple.com/us/app/trap-shooting-scorecard/id1450821405?mt=8">Visit Now</a></p>
@@ -35,7 +35,7 @@
     </div>
     <div>
         <center>
-            <img class="resizing" src="Images/AppLogos/Calc.png" alt="Computer Science Calculator" />
+            <img class="resizing" src="Images/Projects/CSC.png" alt="Computer Science Calculator" />
             <h2><i>Computer Science Calculator</i></h2>
             <p>Published: <a href="ComputerScienceCalculator.html">Support Page</a></p>
             <p>View at the App Store: <a href="https://itunes.apple.com/us/app/computer-science-converter/id1451753843?mt=8">Visit Now</a></p>
@@ -52,7 +52,7 @@
     </div>
     <div>
         <center>
-            <img class="resizing" src="Images/AppLogos/Speed.png" alt="Simple Speedometer Plus Map" />
+            <img class="resizing" src="Images/Projects/Speedometer.png" alt="Simple Speedometer Plus Map" />
             <h2><i>Simple Speedometer Plus Map</i></h2>
             <p>Published: <a href="SpeedometerPlusMap.html">Support Page</a></p>
             <p>View at the App Store: <a href="https://apps.apple.com/us/app/simple-speedometer-and-map/id1485405938">Visit Now</a></p>
@@ -69,7 +69,7 @@
     </div>
     <div id="item5">
         <center>
-            <img class="resizing" src="Images/AppLogos/HC.png" alt="Holiday Clicker" />
+            <img class="resizing" src="Images/Projects/Holiday.png" alt="Holiday Clicker" />
             <h2><i>Holiday Clicker</i></h2>
             <p>Published: <a href="HolidayClicker.html">Support Page</a></p>
             <p>View at the App Store: <a href="https://apps.apple.com/us/app/holiday-clicker/id1490141107">Visit Now</a></p>
@@ -86,7 +86,7 @@
     </div>
     <div id="item6">
         <center>
-            <img class="resizing" src="Images/AppLogos/OTH.png" alt="On The Hunt" />
+            <img class="resizing" src="Images/Projects/OTH.png" alt="On The Hunt" />
             <h2><i>On The Hunt</i></h2>
             <p>Not Yet Published</p>
             <p>View progress on Github: <a href="https://github.com/ajrotert">Visit Now</a></p>
